[gd_scene load_steps=4 format=3 uid="uid://sconau332w7v"]

[ext_resource type="Texture2D" uid="uid://b3scc8npqh02p" path="res://assets/placeholder_clock.png" id="1_y58p0"]
[ext_resource type="Texture2D" uid="uid://doh8th3gr2r0e" path="res://assets/Placeholder Time pass indicator.png" id="2_7dv1d"]
[ext_resource type="Script" uid="uid://dto8qhr5bork" path="res://scripts/clock.gd" id="2_eptq3"]

[node name="Clock" type="Node2D"]
script = ExtResource("2_eptq3")
tickmarkTexture = ExtResource("2_7dv1d")

[node name="GameTimer" type="Timer" parent="."]
wait_time = 180.0
one_shot = true
autostart = true

[node name="ClockBackground" type="Sprite2D" parent="."]
texture = ExtResource("1_y58p0")
centered = false

[node name="TickmarkTimer" type="Timer" parent="."]

[connection signal="timeout" from="TickmarkTimer" to="." method="_on_tickmark_timer_timeout"]
